@@ -5,8 +5,11 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.UUID;
 
 /**
  * Main API class for AdvancedPerks plugin.
@@ -25,18 +28,19 @@ public final class AdvancedPerksAPI {
     private final de.fabilucius.advancedperks.data.state.PerkStateController perkStateController;
 
     /**
-     * Private constructor to ensure singleton pattern
+     * Private constructor to ensure singleton pattern.
      */
     private AdvancedPerksAPI() {
         this.plugin = JavaPlugin.getPlugin(de.fabilucius.advancedperks.AdvancedPerks.class);
         this.perkManager = plugin.getPerkManager();
-        this.perkRegistry = plugin.getInjector().getInstance(de.fabilucius.advancedperks.registry.PerkRegistry.class);
-        this.perkDataRepository = plugin.getInjector().getInstance(de.fabilucius.advancedperks.data.PerkDataRepository.class);
+        AdvancedPerksAPI.perkRegistry = plugin.getInjector().getInstance(de.fabilucius.advancedperks.registry.PerkRegistry.class);
+        AdvancedPerksAPI.perkDataRepository = plugin.getInjector().getInstance(de.fabilucius.advancedperks.data.PerkDataRepository.class);
         this.perkStateController = plugin.getInjector().getInstance(de.fabilucius.advancedperks.data.state.PerkStateController.class);
     }
 
     /**
-     * Gets the API instance
+     * Gets the API instance.
+     *
      * @return The API instance
      */
     public static AdvancedPerksAPI getInstance() {
@@ -47,7 +51,8 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Checks if the API is available and ready to use
+     * Checks if the API is available and ready to use.
+     *
      * @return true if API is available, false otherwise
      */
     public static boolean isAvailable() {
@@ -57,7 +62,8 @@ public final class AdvancedPerksAPI {
     // ========== PERK MANAGEMENT METHODS ==========
 
     /**
-     * Gets all registered perks
+     * Gets all registered perks.
+     *
      * @return Unmodifiable list of all perks
      */
     public List<Perk> getAllPerks() {
@@ -65,17 +71,19 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Gets all enabled perks (enabled in configuration)
+     * Gets all enabled perks (enabled in configuration).
+     *
      * @return List of enabled perks
      */
     public List<Perk> getEnabledPerks() {
         return perkRegistry.getPerks().stream()
                 .filter(Perk::isEnabled)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Gets a perk by its identifier
+     * Gets a perk by its identifier.
+     *
      * @param identifier The perk identifier
      * @return The perk or null if not found
      */
@@ -84,7 +92,8 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Gets a perk by its class
+     * Gets a perk by its class.
+     *
      * @param perkClass The perk class
      * @return The perk instance or null if not found
      */
@@ -95,7 +104,8 @@ public final class AdvancedPerksAPI {
     // ========== PLAYER PERK METHODS ==========
 
     /**
-     * Gets all perks that a player has unlocked
+     * Gets all perks that a player has unlocked.
+     *
      * @param player The player
      * @return List of unlocked perks
      */
@@ -104,10 +114,12 @@ public final class AdvancedPerksAPI {
         return perkData.getBoughtPerks().stream()
                 .map(perkRegistry::getPerkByIdentifier)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     /**
      * Alias für hasPerkUnlocked – prüft, ob ein Spieler einen Perk freigeschaltet hat.
+     *
      * @param player   Der Spieler
      * @param perkId   Die Perk-ID
      * @return true, wenn freigeschaltet, sonst false
@@ -115,32 +127,38 @@ public final class AdvancedPerksAPI {
     public static boolean isPerkUnlocked(Player player, String perkId) {
         return hasPerkUnlocked(player, perkId);
     }
+
     /**
-     * Gets all currently enabled perks for a player
+     * Gets all currently enabled perks for a player.
+     *
      * @param player The player
      * @return List of enabled perks
      */
     public List<Perk> getEnabledPerks(Player player) {
         de.fabilucius.advancedperks.data.PerkData perkData = perkDataRepository.getPerkDataByPlayer(player);
-        return new ArrayList<>(perkData.getEnabledPerks());
+        return List.copyOf(perkData.getEnabledPerks());
     }
 
     /**
-     * Checks if a player has permission to use a perk
+     * Checks if a player has permission to use a perk.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return true if player has permission, false otherwise
      */
     public boolean hasPermission(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return false;
+        if (perk == null) {
+            return false;
+        }
 
         return perkStateController.canUsePerk(player, perk) ==
                 de.fabilucius.advancedperks.data.state.PerkUseStatus.CAN_BE_USED;
     }
 
     /**
-     * Checks if a player has unlocked a perk
+     * Checks if a player has unlocked a perk.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return true if unlocked, false otherwise
@@ -151,14 +169,17 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Checks if a perk is currently enabled for a player
+     * Checks if a perk is currently enabled for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return true if enabled, false otherwise
      */
     public static boolean isPerkEnabled(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return false;
+        if (perk == null) {
+            return false;
+        }
 
         de.fabilucius.advancedperks.data.PerkData perkData = perkDataRepository.getPerkDataByPlayer(player);
         return perkData.isPerkEnabled(perk);
@@ -167,14 +188,17 @@ public final class AdvancedPerksAPI {
     // ========== PERK ACTIONS ==========
 
     /**
-     * Enables a perk for a player
+     * Enables a perk for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the operation
      */
     public PerkActionResult enablePerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkActionResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkActionResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.data.state.PerkToggleResult result =
                 perkStateController.enablePerk(player, perk);
@@ -183,14 +207,17 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Disables a perk for a player
+     * Disables a perk for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the operation
      */
     public PerkActionResult disablePerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkActionResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkActionResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.data.state.PerkToggleResult result =
                 perkStateController.disablePerk(player, perk);
@@ -199,14 +226,17 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Toggles a perk for a player
+     * Toggles a perk for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the operation
      */
     public PerkActionResult togglePerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkActionResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkActionResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.data.state.PerkToggleResult result =
                 perkStateController.togglePerk(player, perk);
@@ -215,14 +245,17 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Forces a perk to be enabled for a player (bypasses checks)
+     * Forces a perk to be enabled for a player (bypasses checks).
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the operation
      */
     public PerkActionResult forceEnablePerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkActionResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkActionResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.data.state.PerkToggleResult result =
                 perkStateController.forceEnablePerk(player, perk);
@@ -231,14 +264,17 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Forces a perk to be disabled for a player
+     * Forces a perk to be disabled for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the operation
      */
     public PerkActionResult forceDisablePerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkActionResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkActionResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.data.state.PerkToggleResult result =
                 perkStateController.forceDisablePerk(player, perk);
@@ -247,7 +283,8 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Disables all perks for a player
+     * Disables all perks for a player.
+     *
      * @param player The player
      */
     public void disableAllPerks(Player player) {
@@ -257,14 +294,17 @@ public final class AdvancedPerksAPI {
     // ========== ECONOMY METHODS ==========
 
     /**
-     * Attempts to buy a perk for a player
+     * Attempts to buy a perk for a player.
+     *
      * @param player The player
      * @param perkId The perk identifier
      * @return Result of the purchase
      */
     public PerkBuyResult buyPerk(Player player, String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return PerkBuyResult.PERK_NOT_FOUND;
+        if (perk == null) {
+            return PerkBuyResult.PERK_NOT_FOUND;
+        }
 
         de.fabilucius.advancedperks.core.economy.EconomyController economyController =
                 plugin.getInjector().getInstance(de.fabilucius.advancedperks.core.economy.EconomyController.class);
@@ -272,43 +312,43 @@ public final class AdvancedPerksAPI {
         de.fabilucius.advancedperks.core.economy.PerkBuyResult result =
                 economyController.buyPerk(player, perk);
 
-        switch (result) {
-            case SUCCESS:
-                return PerkBuyResult.SUCCESS;
-            case ALREADY_BOUGHT_PERK:
-                return PerkBuyResult.ALREADY_BOUGHT;
-            case NOT_ENOUGH_FUNDS:
-                return PerkBuyResult.NOT_ENOUGH_MONEY;
-            case NO_PRICE_SET:
-                return PerkBuyResult.NO_PRICE_SET;
-            case NO_ECONOMY_INTERFACE:
-                return PerkBuyResult.NO_ECONOMY;
-            default:
-                return PerkBuyResult.ERROR;
-        }
+        return switch (result) {
+            case SUCCESS -> PerkBuyResult.SUCCESS;
+            case ALREADY_BOUGHT_PERK -> PerkBuyResult.ALREADY_BOUGHT;
+            case NOT_ENOUGH_FUNDS -> PerkBuyResult.NOT_ENOUGH_MONEY;
+            case NO_PRICE_SET -> PerkBuyResult.NO_PRICE_SET;
+            case NO_ECONOMY_INTERFACE -> PerkBuyResult.NO_ECONOMY;
+            default -> PerkBuyResult.ERROR;
+        };
     }
 
     /**
-     * Gets the price of a perk
+     * Gets the price of a perk.
+     *
      * @param perkId The perk identifier
      * @return The price or -1 if no price is set
      */
     public double getPerkPrice(String perkId) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return -1;
+        if (perk == null) {
+            return -1;
+        }
 
         return perk.getPrice().orElse(-1.0);
     }
 
     /**
-     * Sets the price of a perk
+     * Sets the price of a perk.
+     *
      * @param perkId The perk identifier
      * @param price The new price
      * @return true if successful, false otherwise
      */
     public boolean setPerkPrice(String perkId, double price) {
         Perk perk = getPerk(perkId);
-        if (perk == null) return false;
+        if (perk == null) {
+            return false;
+        }
 
         de.fabilucius.advancedperks.registry.model.SetPriceResult result =
                 ((de.fabilucius.advancedperks.registry.PerkRegistryImpl) perkRegistry).setPrice(perk, price);
@@ -319,7 +359,8 @@ public final class AdvancedPerksAPI {
     // ========== UTILITY METHODS ==========
 
     /**
-     * Gets the maximum number of perks a player can have active
+     * Gets the maximum number of perks a player can have active.
+     *
      * @param player The player
      * @return Maximum number of active perks
      */
@@ -329,7 +370,8 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Gets the number of currently active perks for a player
+     * Gets the number of currently active perks for a player.
+     *
      * @param player The player
      * @return Number of active perks
      */
@@ -339,19 +381,23 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Checks if a player can enable more perks
+     * Checks if a player can enable more perks.
+     *
      * @param player The player
      * @return true if player can enable more perks, false otherwise
      */
     public boolean canEnableMorePerks(Player player) {
         int max = getMaxActivePerks(player);
-        if (max == -1) return true; // No limit
+        if (max == -1) {
+            return true; // No limit
+        }
 
         return getActivePerksCount(player) < max;
     }
 
     /**
-     * Reloads the perk data for a player
+     * Reloads the perk data for a player.
+     *
      * @param player The player
      */
     public void reloadPlayerData(Player player) {
@@ -361,26 +407,19 @@ public final class AdvancedPerksAPI {
     // ========== HELPER METHODS ==========
 
     private PerkActionResult convertToggleResult(de.fabilucius.advancedperks.data.state.PerkToggleResult result) {
-        switch (result) {
-            case ENABLED:
-                return PerkActionResult.SUCCESS_ENABLED;
-            case DISABLED:
-                return PerkActionResult.SUCCESS_DISABLED;
-            case NO_PERMISSION:
-                return PerkActionResult.NO_PERMISSION;
-            case TOO_MANY_ACTIVE:
-                return PerkActionResult.TOO_MANY_ACTIVE;
-            case DISALLOWED_WORLD:
-                return PerkActionResult.DISALLOWED_WORLD;
-            case EVENT_CANCELLED:
-                return PerkActionResult.EVENT_CANCELLED;
-            default:
-                return PerkActionResult.ERROR;
-        }
+        return switch (result) {
+            case ENABLED -> PerkActionResult.SUCCESS_ENABLED;
+            case DISABLED -> PerkActionResult.SUCCESS_DISABLED;
+            case NO_PERMISSION -> PerkActionResult.NO_PERMISSION;
+            case TOO_MANY_ACTIVE -> PerkActionResult.TOO_MANY_ACTIVE;
+            case DISALLOWED_WORLD -> PerkActionResult.DISALLOWED_WORLD;
+            case EVENT_CANCELLED -> PerkActionResult.EVENT_CANCELLED;
+            default -> PerkActionResult.ERROR;
+        };
     }
 
     /**
-     * Result of a perk action
+     * Result of a perk action.
      */
     public enum PerkActionResult {
         SUCCESS_ENABLED,
@@ -394,7 +433,7 @@ public final class AdvancedPerksAPI {
     }
 
     /**
-     * Result of a perk purchase
+     * Result of a perk purchase.
      */
     public enum PerkBuyResult {
         SUCCESS,
